# micropython-microbit-stubs

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  api-introspection.py  browser-package.py  discrepancies.md  notes.txt  package-lock.json  package.json  pyrightconfig.json  test-pyrightconfig.json
.github/workflows/: node.js.yml
config/: pyrightconfig.json
crowdin/translated/: api.ca.json  api.de.json  api.es-es.json  api.fr.json  api.ga-ie.json  api.ja.json  api.ko.json  api.lol.json  api.nl.json  api.pl.json  api.zh-cn.json  api.zh-tw.json
examples/data-logging/: local.py  main.py  main_min.py  main_min_labels.py
examples/en-only/: README.md  power_two.py  sound_effects.py
examples/microbit-org/: LICENCE  LICENSE  activity-array-starter.py  activity-picker-sample.py  animal-tracker.py  animated-animals-animated-animals.py  beating-heart-beating-heart.py  calming-leds-starter.py  candle.py  ciphers-and-text-based-programming-full-caesar-cipher.py  ciphers-and-text-based-programming-simple-caesar.py  clap-hearts.py  clap-lights.py  clap-o-meter.py  compass-bearing.py  compass-north.py  counter-simple.py  dice.py  disco-lights.py  emotion-badge.py  energy-cost-calculator.py  energy-data-collecting.py  energy-data-planning.py  energy-timer.py  (+65 more)
introspection/: api-introspection.py
scripts/: browser-package.py  build-translations.sh  common.py  crowdin-convert.py  crowdin_convert.py  export_api_ids.py  test.py
scripts/publish/templates/: README.md  pyproject.toml
utils/: ast_hack.py  crowdin-convert.py  edit_and_rebuild_stubs.py  get_stubs_as_json.py
(+615 files in other folders)
